--- a/guardiand/Makefile.am
+++ b/guardiand/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS = guardiand
 guardiand_SOURCES = \
     guardian.c \
     acl.c acl.h \
+    role.c role.h \
     settings.c settings.h \
     worker.c worker.h \
     scheduler.c scheduler.h \
@@ -14,7 +15,6 @@ guardiand_LDADD = \
     $(PCRE_LIBS) \
     $(OPENSSL_LIBS) \
     $(ZMQ_LIBS) \
-    $(SQLITE3_LIBS) \
     $(PTHREAD_LIBS) -lrt
 
 guardiand_LDFLAGS = \
@@ -24,10 +24,10 @@ guardiand_CFLAGS = \
     $(PCRE_CFLAGS) \
     $(OPENSSL_CFLAGS) \
     $(ZMQ_CFLAGS) \
-    $(SQLITE3_CFLAGS) \
     $(PTHREAD_CFLAGS) \
     -DSYSCONFDIR=\"$(sysconfdir)\" \
     -DPLUGINDIR=\"$(libdir)/guardian\" \
+    -DSCHEMADIR=\"$(datadir)/guardian/schema\" \
     -Wall
 
 guardiand_DEPENDENCIES = \
