--- a/tests/guardian/Makefile.am
+++ b/tests/guardian/Makefile.am
@@ -7,4 +7,4 @@ TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = $(SH)
 AM_TESTS_ENVIRONMENT = SOURCE_DIR='$(top_srcdir)'; export SOURCE_DIR;
 
-XFAIL_TESTS =
+XFAIL_TESTS = style.sh
