--- a/tests/libguardian/Makefile.am
+++ b/tests/libguardian/Makefile.am
@@ -8,7 +8,7 @@ SH_LOG_COMPILER = $(SH)
 AM_TESTS_ENVIRONMENT = SOURCE_DIR='$(top_srcdir)'; export SOURCE_DIR;
 
 
-XFAIL_TESTS =
+XFAIL_TESTS = style.sh
 
 check_PROGRAMS = \
     libguardian-helper
