--- a/data/schema/Makefile.am
+++ b/data/schema/Makefile.am
@@ -1,3 +1,3 @@
-schemadir = ${datadir}/guardian/schema
-schema_DATA = \
+schema_distdir = ${datadir}/guardian/schema
+schema_dist_DATA = \
     sqlite.schema
