--- a/plugins/sqlite3-db-plugin/Makefile.am
+++ b/plugins/sqlite3-db-plugin/Makefile.am
@@ -6,7 +6,7 @@ plugin_LTLIBRARIES = \
     sqlite3-db-plugin.la
 
 sqlite3_db_plugin_la_SOURCES = \
-    plugin.c \
+    plugin.c plugin.h \
     db.c db.h \
     host.c host.h \
     ns.c ns.h \
@@ -14,8 +14,9 @@ sqlite3_db_plugin_la_SOURCES = \
     value.c value.h
 
 sqlite3_db_plugin_la_LDFLAGS =       \
-    -avoid-version       \
-    -module              \
+    -avoid-version                   \
+    -export-symbols-regex "^[^_].*"  \
+    -module                          \
     $(PLATFORM_LDFLAGS)
 
 sqlite3_db_plugin_la_LIBADD = \
