Write unit-test for db-plugins.
 - Check plugin-symbols
 - Get hosts from sqlite3-db

--- a/configure.ac
+++ b/configure.ac
@@ -247,7 +247,7 @@ tests/Makefile
 tests/libguardian/Makefile
 tests/guardian/Makefile
 tests/guardiand/Makefile
-tests/plugins/Makefile
+tests/db-plugins/Makefile
 docs/Makefile
 docs/man/Makefile
 docs/man/guardian.1
