Structure db-connect test

--- a/tests/db-plugins/Makefile.am
+++ b/tests/db-plugins/Makefile.am
@@ -1,17 +1,20 @@
 EXTRA_DIST = $(TESTS)
 
 TESTS = \
-    sqlite3-symbols.sh \
-    sqlite3-api.sh     \
-    pgsql-symbols.sh   \
-    pgsql-api.sh
+    sqlite3-symbols.sh      \
+    sqlite3-api.sh          \
+    sqlite3-db-connect.sh   \
+    pgsql-symbols.sh        \
+    pgsql-api.sh            \
+    pgsql-db-connect.sh
 
 TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = $(SH)
 AM_TESTS_ENVIRONMENT = SOURCE_DIR='$(top_srcdir)'; export SOURCE_DIR;
 
 XFAIL_TESTS = \
-    pgsql-api.sh
+    pgsql-api.sh \
+    pgsql-db-connect.sh
 
 check_PROGRAMS = plugin-loader
 
