Load properties from config-file.
 - If a property is in the list of properties for a database-plugin
   set the value there.
 - Add missing config-file to git.

--- a/data/guardian.conf
+++ b/data/guardian.conf
@@ -2,3 +2,13 @@
 #
 # This is the guardian system-wide configuration file.
 # See guardian.conf(5) for more information.
+
+# db_type:
+db_type = sqlite3
+
+db_path = /tmp/guardian.db
+
+db_host =
+db_host = 127.0.0.1
+
+db_port = 
