Fix make distcheck;

--- a/tests/db-plugins/Makefile.am
+++ b/tests/db-plugins/Makefile.am
@@ -25,6 +25,7 @@ SQLITE_TESTDATA = \
 PGSQL_TESTS = \
     pgsql-symbols.sh        \
     pgsql-api.sh            \
+    pgsql-db-listprop.sh  \
     pgsql-db-connect.sh
 
 PGSQL_TESTDATA = \
