Start with db-initialization for sqlite3

--- a/data/schema/Makefile.am
+++ b/data/schema/Makefile.am
@@ -2,4 +2,4 @@ EXTRA_DIST = $(schema_dist_DATA)
 
 schema_distdir = ${datadir}/guardian/schema
 schema_dist_DATA = \
-    sqlite.schema
+    sqlite3.schema
