Fix unittest for listprops.
  - Okay, it should sort the keys before comparing...
    but it's a little more robust this way.
  - Also properly cleanup the connect-db files.

--- a/tests/db-plugins/Makefile.am
+++ b/tests/db-plugins/Makefile.am
@@ -38,7 +38,8 @@ TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = $(SH)
 
 XFAIL_TESTS = \
-    pgsql-db-connect.sh
+    pgsql-db-connect.sh \
+    pgsql-db-listprop.sh
 
 check_PROGRAMS = plugin-loader
 
